--- a/TestApp/polls/templates/polls/index.html
+++ b/TestApp/polls/templates/polls/index.html
@@ -1,20 +1,18 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <title>Polls - Index</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'polls/style.css' %}">
-  </head>
-  <body>
+{% extends 'polls/base.html' %}
+
+{% block title %}Polls - Index{% endblock %}
+
+{% block content %}
+<h5>Questions:</h3>
     {% if latest_question_list %}
         <ul>
-            {% for question in latest_question_list %}                
-                <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-            {% endfor %}
+        {% for question in latest_question_list %}
+            <li>
+                <a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a>
+            </li>
+        {% endfor %}
         </ul>
     {% else %}
         <p>No polls are available.</p>
     {% endif %}
-</body>
-</html>
+{% endblock %}
