--- a/TestApp/polls/templates/polls/results.html
+++ b/TestApp/polls/templates/polls/results.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <title>Polls - Results</title>
-  </head>
-  <body>
-    <h1>{{ question.question_text }}</h1>
-    <ul>
-    {% for choice in question.choice_set.all %}
-        <li>{{ choice.choice_text }} -- {{ choice.votes }} vote{{ choice.votes|pluralize }}</li>
-    {% endfor %}
-    </ul>
-    <a href="{% url 'polls:detail' question.id %}">Vote again?</a>
-  </body>
-</html>
+{% extends 'polls/base.html' %}
+
+{% block title %}Polls - Results{% endblock %}
+
+{% block content %}
+<h1>{{ question.question_text }}</h1>
+<ul>
+  {% for choice in question.choice_set.all %}
+  <li>
+    {{ choice.choice_text }} -- {{ choice.votes }} vote{{choice.votes|pluralize}}
+  </li>
+  {% endfor %}
+</ul>
+<a href="{% url 'polls:detail' question.id %}">Vote again?</a>
+{% endblock %}
